fix: add z-index to display mobile on top of any page

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -38,6 +38,9 @@
       color: $light-coral;
     }
   }
+  .active-link {
+    color: $light-coral;
+  }
 
   &__contact {
     border: rem(2) solid $white;
@@ -69,7 +72,7 @@
       background-color: transparent;
       border: none;
 
-      z-index: 1000;
+      z-index: 9999;
 
       &:hover {
         cursor: pointer;
@@ -93,7 +96,7 @@
       width: 70vw;
       background-color: $midnight-green;
       box-shadow: rgba(0, 37, 41, 0.595) 0px 8px 24px;
-
+      z-index: 9000;
       transition: 0.2s;
       overflow: hidden;
       @include back-image(
